translation-tool/inputs/source_meta/objects/HSvc_TDDSTR__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>TDD STR</relationshipLabel>
        <relationshipName>TDD_STR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TDD STR</relationshipLabel>
        <relationshipName>TDD_STR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Activity</label>
        <referenceTo>Hsvc_CaseActivity__c</referenceTo>
        <relationshipLabel>TDD STR</relationshipLabel>
        <relationshipName>TDD_STR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DownloadSpeed__c</fullName>
        <description>Download Speed</description>
        <label>Download Speed (kb/sec)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executiontime__c</fullName>
        <description>Speed test execution time.</description>
        <label>Execution time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Information on failures.</description>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PacketLossRate__c</fullName>
        <description>Packet loss rate</description>
        <label>Packet Loss Rate (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundTripPingTime__c</fullName>
        <description>Round trip ping time</description>
        <label>Round Trip Ping Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the calls were successful</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UploadSpeed__c</fullName>
        <description>Upload Speed</description>
        <label>Upload Speed (kb/sec)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>TDD STR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TDDSTR-{0000}</displayFormat>
        <label>TDDSTR  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDD STR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>